force-app/main/default/objects/ConfiguracionVenta__mdt/ConfiguracionVenta__mdt.object-meta.xml
<CustomObject>
    <label>ConfiguracionVenta</label>
    <pluralLabel>ConfiguracionVentas</pluralLabel>
</CustomObject>