force-app/main/default/objects/ConfiguracionVenta__mdt/fields/Email_Alerta_Evaluacion_Crediticia__c.field-meta.xml
<CustomField>
    <fullName>Email_Alerta_Evaluacion_Crediticia__c</fullName>
    <label>Email Alerta Evaluacion Crediticia</label>
    <type>Email</type>
</CustomField>