force-app/main/default/objects/ConfiguracionVenta__mdt/fields/RecortType__c.field-meta.xml
<CustomField>
    <fullName>RecortType__c</fullName>
    <label>RecortType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitud_de_Tarjeta_de_Credito</fullName>
                <default>true</default>
                <label>Solicitud_de_Tarjeta_de_Credito</label>
            </value>
            <value>
                <fullName>Prestamo_Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>