force-app/main/default/objects/ConfiguracionVenta__mdt/fields/TipoConfig__c.field-meta.xml
<CustomField>
    <fullName>TipoConfig__c</fullName>
    <label>TipoConfig</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alerta Evaluacion Crediticia</fullName>
                <default>true</default>
                <label>Alerta Evaluacion Crediticia</label>
            </value>
            <value>
                <fullName>Alerta Rechazo</fullName>
            </value>
            <value>
                <fullName>Alerta Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>